cmake_minimum_required(VERSION 3.14)
project(COMP9024_20T2 C)

set(CMAKE_C_STANDARD 11)

# include_directories(Tutorial_Class/Week04)

add_executable(COMP9024_20T2
        # Codes/test.c
        # Codes/class.c
        # Codes/lab01/binary.c
        # Codes/arrat_queue.h
         #Codes/QueueTester.c
        #Codes/main.c
        Codes/pro3.c
        #Codes/proset3.c
        #Codes/pro4.c
        Codes/instack.h
        Codes/instack.c
        #Codes/proset5.c
        Codes/inqueue.c
        Codes/inqueue.h
        #Codes/ass02.c
        Codes/check.c Codes/c.c)


add_executable(COMP9024_20T22
        # Codes/test.c
        # Codes/class.c
        # Codes/lab01/binary.c
        # Codes/arrat_queue.h
        # Codes/arrat_queue.c
        Codes/main.c
        Codes/ass0.c)