cmake_minimum_required(VERSION 3.14)
project(COMP9024_20T2 C)

set(CMAKE_C_STANDARD 11)

# include_directories(Tutorial_Class/Week04)

add_executable(COMP9024_20T2
        # Codes/test.c
        # Codes/class.c
        # Codes/lab01/binary.c
        # Codes/arrat_queue.h
         #Codes/QueueTester.c
        #Codes/main.c
        #Codes/pro3.c
        #Codes/proset3.c
        #Codes/pro4.c
#        Codes/IntStack.h
#        Codes/IntStack.c
#        Codes/binary.c
#        Codes/IntQueue.c
#        Codes/IntQueue.h
        #Codes/ass02.c
        #Codes/palindrome.c
        Codes/midterm.c)

add_executable(COMP9024_20T22
        # Codes/test.c
        # Codes/class.c
        # Codes/lab01/binary.c
        # Codes/arrat_queue.h
        # Codes/arrat_queue.c
        #Codes/main.c
        #Codes/llcreate.c
        Codes/llsplit.c
        )

add_executable(stackandlist
        #Codes/list.c
        #Codes/list.h
        #Codes/list_main.c
        #Codes/Stack.c
        #Codes/stack_main.c
        #Codes/house_main.c
        #Codes/llcreate.c
        #Codes/llsplit.c
        Codes/popularityRank.c
        Codes/WGraph.c
        Codes/WGraph.h
        #Codes/midterm.c
        )